--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,12 @@
     -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>React App</title>
+    <!-- <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script>
+      function reCAPTCHAv3Run(token) {
+        document.getElementById("demo-form").submit();
+      }
+    </script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -41,5 +47,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
   </body>
 </html>
